add title to the page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Pig Dice Game</title>
 	<!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <!-- Fonts -->
@@ -17,8 +17,8 @@
             <div class="text-center">
             	<form class="navbar-form">
                     <div class="form-group">
-                        <input type="text" class="form-control player" placeholder="Player 1 Name" id="player1">
-                        <input type="text" class="form-control player" placeholder="Player 2 Name" id="player2">
+                        <input type="text" class="form-control player" placeholder="Player 1 Name" id="player1" required>
+                        <input type="text" class="form-control player" placeholder="Player 2 Name" id="player2" required>
                     </div>
                 <button type="button" onclick="getData()" class="btn btn-default" id="save">SAVE</button>
                 </form>
